generating docs for HandlerUpdateUser
